[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/AppLogo.png" type="Texture" id=2]
[ext_resource path="res://Resources/df_CartoonCookies_mainlabel.tres" type="DynamicFont" id=3]

[node name="Node2D" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 516.824
margin_top = 20.6685
margin_right = 811.824
margin_bottom = 300.669
rect_scale = Vector2( 1, 0.992309 )
rect_pivot_offset = Vector2( 146.951, 149.474 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="."]
margin_left = 311.027
margin_top = 287.283
margin_right = 1031.03
margin_bottom = 390.283
rect_pivot_offset = Vector2( 315.243, 57.914 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0.764706, 0.752941, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "TEAMS PARTECIPANTS
RANDOM PICKER"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartMeetingButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 510.0
margin_top = 441.0
margin_right = 837.0
margin_bottom = 497.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.27451, 0.254902, 0.254902, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.607843, 0.6, 1 )
custom_colors/font_color_pressed = Color( 0, 0.607843, 0.6, 1 )
text = "Iniziare Meeting"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="StartMeetingButton"]
margin_right = 40.0
margin_bottom = 40.0

[node name="GoToPartecipantsListButton" type="Button" parent="."]
margin_left = 441.0
margin_top = 521.0
margin_right = 912.0
margin_bottom = 577.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.27451, 0.254902, 0.254902, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.607843, 0.6, 1 )
custom_colors/font_color_pressed = Color( 0, 0.607843, 0.6, 1 )
text = "Elenco dei Partecipanti"
flat = true

[node name="ExitButton" type="Button" parent="."]
margin_left = 630.0
margin_top = 600.0
margin_right = 718.0
margin_bottom = 656.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.27451, 0.254902, 0.254902, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
text = "Esci"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
margin_left = -13.0
margin_top = -12.0
margin_right = 1294.0
margin_bottom = 733.0
mouse_filter = 2
color = Color( 0.737255, 0.619608, 0.0862745, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="pressed" from="StartMeetingButton" to="." method="_on_StartMeetingButton_pressed"]
[connection signal="pressed" from="GoToPartecipantsListButton" to="." method="_on_GoToPartecipantsListButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
